Update Profile Responsive

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" >
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
@@ -10,6 +10,21 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Beancoders</title>
+    <style>
+      /* Apply background color to html and body elements */
+      html, body {
+        max-height: 100%;
+        margin: 0;
+        padding: 0;
+        background-color: #d4d4d4; /* Set your desired background color here */
+      }
+
+      body {
+        height: 100%;
+        width: 100%;
+        /* overflow: hidden;  */
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
