added dark/light mode button

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Beancoders</title>
   </head>
-  <body>
+  <body id="app-body">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
