--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Beancoders</title>
